# decaf

./: .gitignore  .project  CMakeLists.txt  Makefile.am  README  README~  clean  configure.ac  configure.scan  sync  synthesize
all-tests/: Makefile  Makefile.am
all-tests/parse/: Makefile  Makefile.am  bad1.test  bad4.test  bad6.test  expressions.test  inheritance.test  matrix.test  test.in
all-tests/scope/: Makefile  blackjack.test  t1.test  t10.test  t4.test  t8.test  t9.test
all-tests/semantic/: Makefile  bad1.test  bad10.test  bad2.test  bad8.test  queue.test  stack.test  t12.test  t13.test  t2.test  t3.test  t6.test
arch/mips/: CMakeLists.txt  arch.h  mips.cc  mips.h  tac.cc  tac.h
arch/x86/: libdecaf.s
ast/: CMakeLists.txt  ast.cc  ast.h  decl.cc  decl.h  expr.cc  expr.h  stmt.cc  stmt.h  type.cc  type.h
codegen/: CMakeLists.txt  codegen.cc  codegen.h  framealloc.cc  framealloc.h  symtable.cc  symtable.h
dcc/: CMakeLists.txt
decaf/: .gitignore  CMakeLists.txt  codegen.cc  codegen.h  dcc.cc  dcc.h  errors.cc  errors.h  framealloc.cc  hashtable.h  lex.ll  lexer.h  list.h  location.h  parse.yy  symtable.cc  utility.cc  utility.h
doc/: extensions.mkd  todo.mkd
etc/: exceptions.s
m4/: .gitignore
src/: .gitignore  .scanner.h.swp  CMakeLists.txt  Makefile.am  Makefile.am2  ast-decl.cc  ast-decl.h  ast-expr.cc  ast-expr.h  ast-stmt.cc  ast-stmt.h  ast-type.cc  ast-type.h  ast.cc  ast.h  ast_decl.cc  ast_decl.h  ast_expr.cc  ast_expr.h  ast_stmt.cc  ast_stmt.h  ast_type.cc  ast_type.h  calc.h  calc_scan.ll  calc_tab.yy  codegen.cc  codegen.h  dcc.cc  dcc.h  decaf-lex-dzc.ll  decaf-lex.cc  decaf-lex.ll  decaf-parse-ks.yy  decaf-parse.cc  decaf-parse.h  decaf-parse.output  decaf-parse.yy  dscanner.h  dscanner.ll  (+38 more)
src/arch/mips/: mips.cc  mips.h  tac.cc  tac.h
src/arch/x86/: arch.h  tac.cc  tac.h  x86.cc  x86.h
src/ast/: ast.cc  ast.h  decl.cc  decl.h  expr.cc  expr.h  stmt.cc  type.cc  type.h
src/decaf/: #decaf-parse.yy#  .test.decaf.swp  Makefile.am  Makefile.am~  ast_decl.cc  ast_decl.h  ast_expr.cc  ast_expr.h  ast_stmt.cc  ast_stmt.h  ast_type.cc  ast_type.h  dcc.cc  decaf-lex-dzc.ll  decaf-lex.ll  decaf-parse.yy  errors.h  parse.h  parse.h~  test.decaf
src/latte/: Makefile  Makefile.am  ast.cc  ast.h  ast_decl.cc  ast_expr.cc  ast_expr.h  ast_stmt.cc  ast_stmt.h  ast_type.cc  latte-lex-old.ll  latte-parse.yy  ltc.cc  parse.h
src/latte/.deps/: ast.Po  ast_decl.Po  ast_expr.Po  ast_stmt.Po  ast_type.Po  errors.Po  latte-lex.Po  latte-parse.Po  ltc.Po
test/: Makefile.am  test-all.py  test-codegen.py  test-parse.py  test-scope.py  test-semantic.py  test.in
test/codegen/: Makefile  array2.out  array3.out  blackjack.out  class1.decaf  class1.out  class14.out  class2.out  class4.out  class5.out  class6.out  class7.out  constants3.out  for1.out  for2.out  for4.out  function1.out  function4.out  if1.out  if3.out  if5.out  inherit1.out  inherit4.out  inherit5.out  io1.out  link1.out1  link1.out2  link3.out1  link3.out2  op1.out  op10.out  op11.out  op12.decaf  op13.decaf  op13.out  op7.out  rec.out1  rename.sh  rterror3.out  sort.out  (+3 more)
test/parse/: bad2.test  class.test  functions.test  gentest.pl  simple.test
test/scope/: bad6.test  test.in
test/semantic/: Makefile  Makefile.am  bad11.test  bad9.test
tests/: Makefile  Makefile.am  badbool.test  baddouble.test  badident.test  badint.test  badop.test  badpre.test  badreserve.test  badstring.test  comment.test  define.test  ident.test  number.test  program2.test  program3.test  reserve_op.test  string.test  test.in
tests/codegen/: Makefile  Makefile.am  array1.out  array4.out  class3.out  constants1.out  constants2.out  for3.out  for5.out  for6.out  function2.out  function3.out  function6.out  genmake.py  if2.out  inherit2.out  inherit3.out  inherit6.out  io2.out  io3.out  link2.out  op3.out  op4.out  op5.out  op6.out  op9.out  queue.out  rec.out  rterror4.out  run  stack.out  test.in  tmp.asm  var3.out  var4.out  var5.out  while1.out  while4.out
tests/parse/: Makefile  Makefile.am  bad3.test  bad5.test  bad7.test  control.test  incrdecr.test  interface.test  switch.test  test.in
tests/scanner/: Makefile  Makefile (crown's conflicted copy 2011-07-17)  Makefile.am  test.in
tests/scope/: Makefile  Makefile.am  bad4.test  bad5.test  bad6.out  matrix.test  t5.test
tests/semantic/: Makefile  bad3.test  bad7.test  new.test  t7.test
